--- a/gunjan.ipynb
+++ b/gunjan.ipynb
@@ -71,23 +71,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wZa90tt85DKX",
-        "outputId": "cb2f939b-cc8a-49e0-f841-bf42ac7b75aa"
+        "outputId": "104789fd-9f5b-4669-f929-dbc8abf495ec"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter 1st number : 2\n",
+            "Enter 1st number : 1\n",
             "Enter 2nd number : 2\n",
-            "Enter 3rd number : 2\n",
-            "All the numbers are equal..\n"
+            "Enter 3rd number : 3\n",
+            "3.0 is the largest\n"
           ]
         }
       ],
